cmake_minimum_required(VERSION 2.8.9)
project(cFWK)
set(CMAKE_BUILD_TYPE Debug)
#message($ENV{CXXFLAGS})
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")  
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lm")
#SET(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -lpthread")
#SET(CMAKE_STATIC_LINKER_FLAGS_DEBUG "${CMAKE_STATIC_LINKER_FLAGS}")  
#SET(CMAKE_STATIC_LINKER_FLAGS_RELEASE "${CMAKE_STATIC_LINKER_FLAGS}")  

IF( DEFINED ENV{CROSS_FILE})
    include($ENV{CROSS_FILE})
ENDIF()

UNSET(cxFWK_SRCS CACHE)
UNSET(cxFWK_INCS CACHE)

INCLUDE_DIRECTORIES(.)

ADD_SUBDIRECTORY(UnitTest)
INCLUDE_DIRECTORIES(${cxFWK_INCS})
message(cxFWK_SRCS=${cxFWK_SRCS})
add_library(cxFWK STATIC ${cxFWK_SRCS})
set_target_properties(
    cxFWK
    PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/out/lib
    )

ADD_SUBDIRECTORY(UnitTestUserCase)






